--- a/helm/jupyterhub/values.yaml
+++ b/helm/jupyterhub/values.yaml
@@ -354,6 +354,7 @@ singleuser:
   extraFiles: {}
   extraEnv:
     JUPYTERHUB_SINGLEUSER_APP: "jupyter_server.serverapp.ServerApp"
+    LICENSE_KEY_SIGNED: <syntho-license-key>
   lifecycleHooks: {}
   initContainers: []
   extraContainers: []
