--- a/helm/ray/chart/templates/operator_namespaced.yaml
+++ b/helm/ray/chart/templates/operator_namespaced.yaml
@@ -56,6 +56,8 @@ spec:
               fieldPath: metadata.namespace
         - name: AUTOSCALER_MAX_NUM_FAILURES
           value: "inf"
+        - name: LICENSE_KEY_SIGNED
+          value: {{ .Values.SynthoLicense }}
         resources:
           requests:
             cpu: 1
