--- a/helm/ray/values.yaml
+++ b/helm/ray/values.yaml
@@ -5,12 +5,15 @@
 # image is Ray image to use for the head and workers of this Ray cluster.
 # It's recommended to build custom dependencies for your workload into this image,
 # taking one of the offical `rayproject/ray` images as base.
-image: syntho.azurecr.io/syntho-ray:0.3.3.9-cpu
+image: syntho.azurecr.io/syntho-ray:0.3.3.10-cpu
 # headPodType is the podType used for the Ray head node (as configured below).
 headPodType: rayHeadType
 
 imagePullSecrets: 
     - name: acr-auth
+
+SynthoLicense: <syntho-license-key>
+
 # podTypes is the list of pod configurations available for use as Ray nodes.
 podTypes:
     # The key for each podType is a user-defined string.
@@ -19,10 +22,10 @@ podTypes:
     rayHeadType:
         # CPU is the number of CPUs used by this pod type.
         # (Used for both requests and limits. Must be an integer, as Ray does not support fractional CPUs.)
-        CPU: 20
+        CPU: 4
         # memory is the memory used by this Pod type.
         # (Used for both requests and limits.)
-        memory: 110Gi
+        memory: 25Gi
         # GPU is the number of NVIDIA GPUs used by this pod type.
         # (Optional, requires GPU nodes with appropriate setup. See https://docs.ray.io/en/master/cluster/kubernetes-gpu.html)
         GPU: 0
@@ -77,13 +80,6 @@ podTypes:
         #   operator: Exists
         #   effect: NoSchedule
 
-    rayWorkerTypeHighMem:
-        minWorkers: 0
-        maxWorkers: 2
-        memory: 110Gi
-        CPU: 20
-        GPU: 0
-
 
 # Operator settings:
 
@@ -106,4 +102,4 @@ operatorNamespace: default
 # It is recommended to use the same Ray version in the operator as in the Ray clusters managed
 # by the operator. In other words, the images specified under the fields `operatorImage` and `image`
 # should carry matching Ray versions.
-operatorImage: syntho.azurecr.io/syntho-ray:0.3.3.9-cpu
+operatorImage: syntho.azurecr.io/syntho-ray:0.3.3.10-cpu
