--- a/docker-compose/syntho-ui/example.env
+++ b/docker-compose/syntho-ui/example.env
@@ -20,7 +20,7 @@ CORE_RAY_ADDRESS=
 CORE_PORT=8080
 
 BACKEND_PORT=8000
-BACKEND_SECRET_KEY="66n6ldql(b2g0jmop(gr)x0tz!*^7(d1_$2#y&$t&3r$=cr%#"
+BACKEND_SECRET_KEY="66n6ldql(b2g0jmop(gr)"
 BACKEND_ROOT_PASSWORD=
 BACKEND_REDIS_HOST=redis
 BACKEND_REDIS_PORT=6379
