chore: update docker-compose files for Ray

--- a/docker-compose/ray/option-2/docker-compose-worker.yaml
+++ b/docker-compose/ray/option-2/docker-compose-worker.yaml
@@ -11,6 +11,7 @@ services:
     shm_size: 4gb
     environment:
        RAY_SCHEDULER_SPREAD_THRESHOLD: 0.0
+       LICENSE_KEY_SIGNED: ${LICENSE_KEY}
     ulimits:
       nofile:
         soft: 65536
