--- a/docker-compose/ray/option-2/docker-compose-head.yaml
+++ b/docker-compose/ray/option-2/docker-compose-head.yaml
@@ -13,6 +13,7 @@ services:
       - 8265:8265
     environment:
         RAY_SCHEDULER_SPREAD_THRESHOLD: 0.0
+        LICENSE_KEY_SIGNED: ${LICENSE_KEY}
     ulimits:
       nofile:
         soft: 65536
