chore: add license key for jupyterhub setup

--- a/docker-compose/jupyterhub/docker-compose.yml
+++ b/docker-compose/jupyterhub/docker-compose.yml
@@ -48,6 +48,7 @@ services:
       # Postgres db info
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_HOST: localhost
+      LICENSE_KEY_SIGNED: ${LICENSE_KEY}
     env_file:
       - postgres.env
     #  - secrets/oauth.env
