build: change chart name to syntho-ui for consistency and update values.yaml file

--- a/helm/syntho-ui/values.yaml
+++ b/helm/syntho-ui/values.yaml
@@ -17,8 +17,9 @@ core:
   service:
     port: 8080
     type: ClusterIP
+  database_enabled: true
   db:
-    user: postgres
+    username: postgres
     password: postgres
     name: rwdb
     host: postgres
@@ -35,19 +36,24 @@ backend:
     tag: latest
   name: backend
   port: 8000
-  secret_key: secret-key-change-this-into-something-much-more-safe
+  secret_key: <django-secret-key>
   redis:
     host: redis-svc
     port: 6379
     db: 0
   service:
     port: 8000
+  database_enabled: true
   db:
-    username: syntho
+    user: syntho
     password: syntho-local-password
     name: syntho-backend
     host: database
     port: 5432
+  user:
+    username: admin
+    password: password
+    email: admin@company.com
   ingress:
     enabled: false
     name: backend-ingress
