--- a/helm/syntho-ui/Chart.yaml
+++ b/helm/syntho-ui/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: syntho-core
+name: syntho-ui
 description: Syntho Application helm chart
 
 # A chart can be either an 'application' or a 'library' chart.
