--- a/helm/syntho-ui/values.yaml
+++ b/helm/syntho-ui/values.yaml
@@ -36,7 +36,7 @@ backend:
     tag: latest
   name: backend
   port: 8000
-  secret_key: <django-secret-key>
+  secret_key: secret-key-change-this-into-something-much-more-safe
   redis:
     host: redis-svc
     port: 6379
