feat: add support for node selection, tolerations and affinity

--- a/helm/syntho-ui/templates/dbs/database-deployment.yaml
+++ b/helm/syntho-ui/templates/dbs/database-deployment.yaml
@@ -47,5 +47,14 @@ spec:
         - name: database-data-2
           persistentVolumeClaim:
             claimName: database-data-2
+      {{- if .Values.nodeSelector }}
+      nodeSelector: {{- .Values.nodeSelector | toYaml | nindent 8 }}
+      {{- end }}
+      {{- if .Values.tolerations }}
+      tolerations: {{- .Values.tolerations | toYaml | nindent 8 }}
+      {{- end }}
+      {{- if .Values.affinity }}
+      affinity: {{- .Values.affinity | toYaml | nindent 8 }}
+      {{- end }}
 status: {}
 {{- end }}
