--- a/helm/syntho-ui/templates/redis/redis-pod.yaml
+++ b/helm/syntho-ui/templates/redis/redis-pod.yaml
@@ -24,3 +24,12 @@ spec:
   volumes:
     - name: data
       emptyDir: {}
+  {{- if .Values.nodeSelector }}
+  nodeSelector: {{- .Values.nodeSelector | toYaml | nindent 4 }}
+  {{- end }}
+  {{- if .Values.tolerations }}
+  tolerations: {{- .Values.tolerations | toYaml | nindent 4 }}
+  {{- end }}
+  {{- if .Values.affinity }}
+  affinity: {{- .Values.affinity | toYaml | nindent 4 }}
+  {{- end }}
