--- a/helm/syntho-ui/templates/dbs/postgres-deployment.yaml
+++ b/helm/syntho-ui/templates/dbs/postgres-deployment.yaml
@@ -43,5 +43,14 @@ spec:
         - name: database-data-1
           persistentVolumeClaim:
             claimName: database-data-1
+      {{- if .Values.nodeSelector }}
+      nodeSelector: {{- .Values.nodeSelector | toYaml | nindent 8 }}
+      {{- end }}
+      {{- if .Values.tolerations }}
+      tolerations: {{- .Values.tolerations | toYaml | nindent 8 }}
+      {{- end }}
+      {{- if .Values.affinity }}
+      affinity: {{- .Values.affinity | toYaml | nindent 8 }}
+      {{- end }}
 status: {}
 {{- end }}
