--- a/helm/syntho-ui/templates/core/core-deployment.yaml
+++ b/helm/syntho-ui/templates/core/core-deployment.yaml
@@ -56,6 +56,8 @@ spec:
             {{- end }}
           {{- end }}
           name: {{ .Values.core.name }}
+          volumeMounts:
+            {{- toYaml .Values.core.volumeMounts | default "" | nindent 12 }} 
           ports:
             - containerPort: {{ .Values.core.port }}
           imagePullPolicy: Always
