--- a/helm/syntho-ui/values.yaml
+++ b/helm/syntho-ui/values.yaml
@@ -17,6 +17,8 @@ core:
   service:
     port: 8080
     type: ClusterIP
+  volumes: []
+  volumeMounts: []
   database_enabled: true
   db:
     username: postgres
@@ -54,6 +56,8 @@ backend:
     username: admin
     password: password
     email: admin@company.com
+  volumes: []
+  volumeMounts: []
   ingress:
     enabled: false
     name: backend-ingress
