--- a/helm/ray/values.yaml
+++ b/helm/ray/values.yaml
@@ -5,6 +5,9 @@ SynthoLicense: key
 
 clustername: ray-cluster
 
+imagePullSecrets:
+  - name: syntho-cr-secret
+
 operatorImage:
   repository: kuberay/operator
   tag: nightly
@@ -215,7 +218,7 @@ nameOverride: "kuberay"
 fullnameOverride: "kuberay-operator"
 
 storage:
-  storageClassName: azurefile-csi
+  storageClassName: default
 
 serviceAccount:
   # Specifies whether a service account should be created
@@ -224,6 +227,7 @@ serviceAccount:
   # If not set and create is true, a name is generated using the fullname template
   name: "kuberay-operator"
 
+# Resources for operator
 resources:
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
