chore: adjust default image for operator

--- a/helm/ray/values.yaml
+++ b/helm/ray/values.yaml
@@ -9,8 +9,8 @@ imagePullSecrets:
   - name: syntho-cr-secret
 
 operatorImage:
-  repository: kuberay/operator
-  tag: nightly
+  repository: syntho.azurecr.io/syntho-operator-ray
+  tag: latest
   pullPolicy: IfNotPresent
 
 image:
