fix: add additional variables for setting of images for postgres and redis and other small fixes

--- a/helm/syntho-ui/templates/core/core-worker-pod.yaml
+++ b/helm/syntho-ui/templates/core/core-worker-pod.yaml
@@ -10,7 +10,7 @@ metadata:
     app: {{ .Values.core.name }}-worker
   name: {{ .Values.core.name }}-worker
 spec:
-  replicas: 1
+  replicas: {{ .Values.core.replicaCount }}
   selector:
     matchLabels:
       app: {{ .Values.core.name }}-worker
