--- a/helm/syntho-ui/templates/dbs/postgres-deployment.yaml
+++ b/helm/syntho-ui/templates/dbs/postgres-deployment.yaml
@@ -25,7 +25,7 @@ spec:
               value: {{quote .Values.core.db.password }}
             - name: POSTGRES_USER
               value: {{quote .Values.core.db.username }}
-          image: postgres:latest
+          image: "{{ .Values.db.image.repository }}:{{ .Values.db.image.tag }}"
           name: postgres
           resources: {}
           ports:
