chore: adjust registry value for default values files

--- a/helm/syntho-ui/values.yaml
+++ b/helm/syntho-ui/values.yaml
@@ -120,7 +120,7 @@ frontend:
 
 db:
   image:
-    repository: synthoregistry.azurecr.io/postgres
+    repository: syntho.azurecr.io/postgres
     tag: latest
 
 redis:
