fix: disable additional worker group for ray cluster by default

--- a/helm/ray/values.yaml
+++ b/helm/ray/values.yaml
@@ -157,7 +157,7 @@ worker:
 additionalWorkerGroups:
   smallGroup:
     # Disabled by default
-    disabled: false
+    disabled: true
     replicas: 1
     minReplicas: 1
     maxReplicas: 3
